--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -4,13 +4,19 @@
   flex-wrap: wrap;
   font-size: var(--font-size);
   font-family: var(--font-family);
-  font-weight: 300;
+  font-weight: var(--font-weight);
   min-height: 100vh;
+  //background: linear-gradient(0deg, rgba(208, 208, 208, 0) 5%, rgba(255, 255, 255, 0) 55%), url('../static/bg.jpg') var(--site-bg-color);
+  background: var(--site-bg-color);
+  //background-size: cover;
+  //background-repeat: no-repeat;
+  //background-attachment: fixed;
 }
 
 .wrapper{
   margin: 0 auto;
   max-width: 1500px;
   width: 100%;
-  padding: 0 var(--gw-wrapper-padding);
+  padding: 0 var(--wrapper-padding);
+
 }
