--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,10 +6,12 @@
 @import "special";
 @import "layout";
 @import "typography";
+@import "visibility";
 @import "header";
 @import "header-nav";
 @import "content";
 @import "content-main";
 @import "content-aside";
+@import "specs-list";
 @import "footer";
 @import "modal";
