--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -1,8 +1,11 @@
 .content{
   flex: 1 1 auto;
   width:100%;
-  &>.wrapper{
-    //background: azure;
+
+  &> .wrapper{
+    padding: 0;
+    background: var(--page-bg-color);
+    letter-spacing: var(--letter-spacing);
   }
 
 }
