--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,8 +1,8 @@
 .footer{
 
-    //background: #97b8d3;
+    background: #97b8d3;
     flex: 0 1 auto;
-    width:100%;
+    width: 100%;
 
     &>.wrapper{
         padding: var(--page-padding);
