--- a/src/scss/_visibility.scss
+++ b/src/scss/_visibility.scss
@@ -57,7 +57,7 @@
     }
 
     &.font-serif{
-      font-family: Times, 'Times New Roman';
+      font-family: Times, serif;
     }
 
     &.color.black-on-white{
