--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,7 +11,10 @@
 @import "header-nav";
 @import "content";
 @import "content-main";
+@import "news";
+@import "bubbles";
 @import "content-aside";
-@import "specs-list";
+@import "courses";
 @import "footer";
 @import "modal";
+@import "totop";
