--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,8 +1,15 @@
 .footer{
-
-    background: #97b8d3;
+    margin-top: var(--page-padding);
+    background: #eff5f9;
     flex: 0 1 auto;
     width: 100%;
+    border-width: 1px 0 0 0;
+    border-style: solid;
+    border-color: #eaeff5;
+
+    @include devices(tablet){
+        margin-top: 0;
+    }
 
     &>.wrapper{
         padding: var(--page-padding);
@@ -15,10 +22,23 @@
 
     &-main{
         flex: 1 1 auto;
+
+        color: #5d5d5d;
     }
 
     &-aside{
         flex: 1 1 auto;
         max-width: 200px;
+    }
+
+
+    &__vk {
+
+        display: inline-block;
+
+        &:hover svg rect {
+            display: inline-block;
+            fill: var(--prime-color);
+        }
     }
 }
