--- a/src/scss/_header-nav.scss
+++ b/src/scss/_header-nav.scss
@@ -4,6 +4,10 @@
   flex: 1 1 auto;
   margin-right: 220rem;
 
+  & a {
+    color: var(--meta-color);
+  }
+
   @include devices(mobile){
     display: none;
   }
@@ -36,7 +40,9 @@
 }
 
 
-
+.main-menu-container{
+  height: 100%;
+}
 
 
 .main-menu{
