--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -3,6 +3,9 @@
   flex: 0 1 auto;
   width:100%;
 
+  & a {
+    text-decoration: none;
+  }
 
   &-branding{
     max-width: 240rem;
@@ -17,6 +20,9 @@
 
     &:hover &__title{
       color: var(--meta-color);
+      background: -webkit-linear-gradient(0deg, var(--meta-color), var(--meta-color));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
 
     }
 
@@ -28,9 +34,12 @@
       white-space: nowrap;
       line-height: calc(var(--line-height) * 0.6);
       font-size: 15rem;
-
       font-variant: all-small-caps;
-      color: var(--title-color);
+      font-weight: calc(var(--font-weight) + 200);
+      color: var(--meta-color);
+      background: -webkit-linear-gradient(0deg, var(--prime-color) 30%, var(--secondary-color) 90%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
   }
