--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -3,7 +3,7 @@ html{
 }
 
 dd, ol, ul{
-  margin-bottom: var(--gw-font-size);
+  margin-bottom: var(--font-size);
 }
 
 
@@ -23,9 +23,15 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h1 {
-  font-size: calc(var(--font-size) * 2.1);
+  font-size: calc(var(--font-size) * 1.8);
   line-height: 1.2;
   margin-bottom: 20rem;
+
+  &>a {
+    color: inherit;
+    text-decoration: none;
+  }
+
   @include devices(mobile){
     font-size: calc(var(--font-size) * 1.5);
   }
@@ -36,6 +42,10 @@ h2 {
   line-height: 1.2;
   margin-bottom: var(--font-size);
 
+  &>a {
+    color: inherit;
+    text-decoration: none;
+  }
   @include devices(mobile){
     font-size: calc(var(--font-size) * 1.3);
     line-height: 1.1;
@@ -64,3 +74,7 @@ img, svg{
   display: block;
 }
 
+a {
+  color: var(--link-color);
+  text-decoration: underline;
+}
