menu for mobile

--- a/src/scss/_bubbles.scss
+++ b/src/scss/_bubbles.scss
@@ -13,11 +13,16 @@
   pointer-events:none;
   right:-200px;
 
-  //border: 1px solid red;
+  @include devices(mobile){
+    display: none;
+  }
+
+
   /*! width:1000px; */
   height:1000px;
   animation:blobby 8s ease-in-out alternate infinite;
   z-index: -1;
+
 
 }
 
@@ -28,5 +33,8 @@
   left:0;
   animation:blobby 8s ease-in-out alternate infinite;
   z-index: -1;
+  @include devices(mobile){
+    display: none;
+  }
 
 }
