--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -14,6 +14,10 @@
     display: block;
     font-weight: 500;
 
+    @include devices(tablet){
+      max-width: 160rem;
+    }
+
     &:hover svg g path{
       fill: var(--meta-color);
     }
@@ -34,6 +38,14 @@
       white-space: nowrap;
       line-height: calc(var(--line-height) * 0.6);
       font-size: 15rem;
+
+      @include devices(tablet){
+
+        font-weight: calc(var(--font-weight) + 100);
+        font-size: 10rem;
+      }
+
+
       font-variant: all-small-caps;
       font-weight: calc(var(--font-weight) + 200);
       color: var(--meta-color);
@@ -54,14 +66,17 @@
   &__search{
     //flex: 0 1 auto;
     align-self: center;
-    padding: 10rem;
-    margin-right: 26rem;
     position: absolute;
-    right: calc(var(--page-padding) + 140rem);
+
+    right: calc(var(--page-padding) + 90rem);
+
+    @include devices(mobile){
+      right: calc(var(--page-padding) + 132rem);
+    }
 
     &> input {
       position: absolute;
-      border: 2px solid var(--meta-color);
+      border: 1px solid var(--meta-color);
       right:-4rem;
       top:-1rem;
       background: var(--page-bg-color);
@@ -78,9 +93,9 @@
       box-sizing: border-box;
       position: relative;
       display: block;
-      width: 40px;
-      height: 40px;
-      border: 5px solid var(--meta-color);
+      width: 30px;
+      height: 30px;
+      border: 3px solid var(--meta-color);
       border-radius: 50%;
     }
 
@@ -89,30 +104,33 @@
       display: block;
       box-sizing: border-box;
       position: absolute;
-      border-radius: 3px;
-      width: 5px;
-      height: 20px;
+      border-radius: 1px;
+      width: 3px;
+      height: 12px;
       background: var(--meta-color);
       transform: rotate(-45deg);
-      top: 25px;
-      left: 30px
+      top: 21px;
+      left: 24px
     }
   }
 
   &__theme-switch{
     //flex: 0 1 auto;
     align-self: center;
-
-    margin-right: 20rem;
     position: absolute;
-    right: calc(var(--page-padding) + 60rem);
+
+    right: var(--page-padding);
+
+    @include devices(mobile){
+      right: calc(var(--page-padding) + 54rem);
+    }
 
     &> label {
 
       display: block;
-      height: 40px;
+      height: 34px;
       position: relative;
-      width: 70px;
+      width: 64px;
 
       & input {
         display: none;
@@ -124,29 +142,29 @@
         cursor: pointer;
         position: absolute;
         inset: 0;
-        border: 3px solid var(--meta-color);
+        border: 2px solid var(--meta-color);
         transition: .4s;
 
       }
 
       & .slider:before {
         background-color: var(--meta-color);
-        bottom: 4px;
+        bottom: 3px;
         content: "";
-        height: 26px;
+        height: 24px;
         left: 4px;
         position: absolute;
         transition: .4s;
-        width: 26px;
+        width: 24px;
       }
 
       & .slider:after {
         content: "🧐";
         display: block;
         position: absolute;
-        top: 12px;
+        top: 10px;
         right: 5px;
-        font-size: 16px;
+        font-size: 15px;
         line-height: 10px;
       }
 
@@ -159,7 +177,7 @@
 
 
       & input:checked + .slider:before {
-        transform: translateX(26px);
+        transform: translateX(28px);
       }
 
       & .slider.round {
@@ -173,15 +191,21 @@
   }
 
   &__menu-toggle{
-    //flex: 0 1 auto;
     align-self: center;
     position: absolute;
     right: var(--page-padding);
-    z-index: 2;
+    top:0;
+    bottom:0;
+    z-index: 0;
+    display: none;
+    align-items: center;
 
+    @include devices(mobile){
+      display: flex;
+    }
     &>button{
-      width: 60px;
-      height: 40px;
+      width: 40px;
+      height: 28px;
       position: relative;
       transition: .5s ease-in-out;
       transform: rotate(0deg);
@@ -190,7 +214,7 @@
       & span {
         display: block;
         position: absolute;
-        height: 5px;
+        height: 4px;
         width: 100%;
         background: var(--meta-color);
         border-radius: 2px;
@@ -207,20 +231,21 @@
       }
 
       & span:nth-child(2) {
-        top: 18px;
+        top: 12px;
         transform-origin: left center;
       }
 
       & span:nth-child(3) {
-        top: 36px;
+        top: 24px;
         transform-origin: left center;
       }
 
 
+
       &.open span:nth-child(1) {
         transform: rotate(45deg);
-        top: -3px;
-        left: 8px;
+        top: -2px;
+        left: 6px;
       }
 
       &.open span:nth-child(2) {
@@ -230,8 +255,8 @@
 
       &.open span:nth-child(3) {
         transform: rotate(-45deg);
-        top: 39px;
-        left: 8px;
+        top: 26px;
+        left: 6px;
       }
 
     }
