--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -16,3 +16,30 @@
 }
 
 
+
+
+@mixin button($color, $bg, $bghover, $radius) {
+  padding: 16rem 32rem;
+  display: inline-block;
+  margin-bottom: 16rem;
+  color: $color;
+  font-weight: 400;
+  background: $bg;
+  border-radius: $radius;
+  cursor: pointer;
+  transition: background-color .3s ease;
+
+  &:hover {
+    background: $bghover;
+  }
+
+  &:disabled {
+    cursor: default;
+    opacity: 0.25;
+
+    &:hover {
+      background: $bg;
+    }
+  }
+}
+
