--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -16,6 +16,11 @@
     min-height: 900px;
     @include devices(tablet){
       border-radius: 0;
+
+    }
+
+    @include devices(mobile){
+      min-height: unset;
     }
 
   }
