--- a/src/scss/_header-nav.scss
+++ b/src/scss/_header-nav.scss
@@ -81,11 +81,15 @@
   padding: 10rem;
   font-size: 26rem;
 
+
   @include devices(tablet){
     padding: 0;
     font-size: 18rem;
   }
 
+  @include  devices(mobile){
+    min-width: 200rem;
+  }
 
   font-weight: 500;
   text-align: center;
