--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -87,7 +87,7 @@ a {
 .upc-input {
   display: inline-block;
   width: 100%;
-  padding: 10rem 20rem;
+  padding: 10rem;
   border-radius: var(--main-radius);
   margin-bottom: 20rem;
   border: 2px solid var(--gray-color);
