tuning vision style

--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -47,7 +47,7 @@
 
 
       font-variant: all-small-caps;
-      font-weight: calc(var(--font-weight) + 200);
+      font-weight: 500;
       color: var(--meta-color);
       background: var(--title-branding-gradient);
       -webkit-background-clip: text;
