--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -18,7 +18,7 @@
 
 
 
-@mixin button($color, $bg, $bghover, $radius) {
+@mixin button($color, $bg, $bghover, $radius,$bordercolor) {
   padding: 16rem 32rem;
   display: inline-block;
   margin-bottom: 16rem;
@@ -26,7 +26,7 @@
   font-weight: 400;
   background: $bg;
   border-radius: $radius;
-  border: 2px solid $color;
+  border: 2px solid $bordercolor;
   cursor: pointer;
   transition: background-color .3s ease;
   text-decoration: var(--link-decoration);
