--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -12,7 +12,7 @@
   input[type=search] {
     flex: 1 1 auto;
     border-width: 1px 0 1px 1px ;
-    border-color: var(--secondary-color);
+    border-color: var(--prime-color);
     border-style: solid;
     border-radius: var(--main-radius) 0 0 var(--main-radius);
     margin-right: calc(-1 * var(--main-radius));
@@ -28,10 +28,11 @@
 
   input[type=submit] {
     color: var(--secondary-color);
-    border: 1px solid var(--secondary-color);
+    border: 1px solid var(--prime-color);
     flex: 0 1 auto;
     text-align: center;
-    min-width: 80rem;
+    height: 60rem;
+    padding: 0 10rem;
     border-radius: var(--main-radius);
     font-variant: all-small-caps;
     cursor: pointer;
