--- a/src/scss/_courses.scss
+++ b/src/scss/_courses.scss
@@ -1,6 +1,7 @@
 .courses {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  align-items: start;
   flex-wrap: wrap;
   text-decoration: var(--link-decoration);
 
